--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
   <header class="header">
     <img src="./avatar.png" alt="avatar" class="header__avatar" />
     <div class="header__textContainer">
-      <h1 class="header__title">Мария Малькина</h1>
-      <h3 class="header__subtitle">QA Engineer [Тестировщик ПО]</h3>
+      <h1 class="header__title">Marie Malkina</h1>
+      <p>QA Engineer</p>
+      <h3 class="header__subtitle">[Тестировщик ПО]</h3>
     </div>
   </header>
   <main>
